--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/google": "^1.1.25",
+    "@ai-sdk/google": "^1.2.22",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "@vapi-ai/web": "^2.2.4",
-    "ai": "^4.1.61",
+    "@vapi-ai/web": "^2.3.10",
+    "ai": "^5.0.79",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "firebase": "^11.4.0",
-    "firebase-admin": "^13.2.0",
+    "firebase": "^11.10.0",
+    "firebase-admin": "^13.5.0",
     "lucide-react": "^0.482.0",
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
@@ -27,6 +27,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^2.0.1",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
