--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.12.0",
     "@vapi-ai/web": "^2.3.10",
-    "ai": "^5.0.79",
+    "ai": "^5.0.99",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.5.0",
     "lucide-react": "^0.482.0",
-    "next": "^15.5.2",
+    "next": "^16.0.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
